# VideoRecorder

./: CMakeLists.txt  README.md  video_recorder.cpp
